- Fixed e2e tests to allow a distribution package to be built - Minor refactoring of page visibility code - Added placeholder Barcode results screen - Barcode entry form + layout (work in progress)

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -8,7 +8,9 @@ body {
 
 body {
   display: flex;
+  flex-direction: row;
   width: 100%;
+  height: 100%;
   justify-content: flex-start;
   align-items: stretch;
   font-family: sans-serif;
@@ -26,7 +28,7 @@ a {
 
 #sidebar {
   margin-top: 1.33em;
-  margin-right: 5px;
+  margin-right: 10px;
   justify-content: flex-start;
 }
 
@@ -42,19 +44,68 @@ a {
 
 #views {
   width: 100%;
-  height: 100px;
+  height: 100%;
+  margin-right: 10px;
   justify-content: flex-start;
   align-items: stretch;
 }
 
 #views #loading {
+  display: flex;
   align-items: center; 
   justify-content: center;
   width: 100%;
-  height: 100px;
+  height: 100%;
 }
 
 .container {
   align-items: stretch;
   justify-content: flex-start;
 }
+
+.formgrid {
+  display: grid;
+  /* grid-template-rows: auto; */
+  grid-auto-rows: 2em;
+  grid-column-gap: 10px;
+  grid-row-gap: 15px;
+  align-items: center;
+}
+
+.formgrid+.formgrid {
+  margin-top:15px;
+}
+
+.formgrid.fg1w {
+  grid-template-columns: [l1-start] 85px [l1-end i1-start] auto [i1-end];
+}
+
+.formgrid.fg2w {
+  grid-template-columns: [l1-start] 85px [l1-end i1-start] auto [i1-end l2-start] 85px [l2-end i2-start] auto [i2-end];
+}
+
+.formgrid .fgC1 { grid-column-start: 1; grid-column-end: 2; }
+.formgrid .fgC2 { grid-column-start: 2; grid-column-end: 3; }
+.formgrid .fgC3 { grid-column-start: 3; grid-column-end: 4; }
+.formgrid .fgC4 { grid-column-start: 4; grid-column-end: 5; }
+
+.formgrid .fgC24 { grid-column-start: 2; grid-column-end: 5; }
+.formgrid .fgC34 { grid-column-start: 3; grid-column-end: 5; }
+
+.formgrid .fgR1 { grid-row-start: 1; grid-row-end: 2; }
+.formgrid .fgR2 { grid-row-start: 2; grid-row-end: 3; }
+.formgrid .fgR3 { grid-row-start: 3; grid-row-end: 4; }
+.formgrid .fgR4 { grid-row-start: 4; grid-row-end: 5; }
+.formgrid .fgR5 { grid-row-start: 5; grid-row-end: 6; }
+.formgrid .fgR6 { grid-row-start: 6; grid-row-end: 7; }
+.formgrid .fgR7 { grid-row-start: 7; grid-row-end: 8; }
+.formgrid .fgR8 { grid-row-start: 8; grid-row-end: 9; }
+
+.formgrid .fgR12 { grid-row-start: 1; grid-row-end: 3; }
+.formgrid .fgR23 { grid-row-start: 2; grid-row-end: 4; }
+.formgrid .fgR34 { grid-row-start: 3; grid-row-end: 5; }
+.formgrid .fgR45 { grid-row-start: 4; grid-row-end: 6; }
+.formgrid .fgR56 { grid-row-start: 5; grid-row-end: 7; }
+.formgrid .fgR67 { grid-row-start: 6; grid-row-end: 8; }
+.formgrid .fgR78 { grid-row-start: 7; grid-row-end: 9; }
+.formgrid .fgR89 { grid-row-start: 8; grid-row-end: 10; }
